name으로 게시판조회,프로필수정,cors설정추가