@@ -1,5 +1,6 @@
 package jjon.pop.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,21 +24,22 @@ public class Webconfiguration {
 	@Autowired private JwtExceptionFilter jwtExceptionFilter;
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://127.0.0.3000"));
-		configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE"));
-		configuration.setAllowedHeaders(List.of("*"));
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/api/v1/*t                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   *", configuration);
-		return source;
+		  CorsConfiguration configuration = new CorsConfiguration();
+		    configuration.setAllowedOrigins(
+		        Arrays.asList("http://localhost:3000", "http://127.0.0.1:3000"));
+		    configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE"));
+		    configuration.setAllowedHeaders(List.of("*"));
+		    configuration.setAllowCredentials(true);
+		    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		    source.registerCorsConfiguration("/api/v1/**", configuration);
+		    return source;
 	}
 	
 	@Bean
 	SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 		http.cors(Customizer.withDefaults())
 		.authorizeHttpRequests((request) -> request
-				.requestMatchers(HttpMethod.POST,
-						"/api/v1/users/**", "/api/v1/users/authenticate")
+				.requestMatchers(HttpMethod.POST, "/api/*/users", "/api/*/users/authenticate")
 				.permitAll()
 				.anyRequest().authenticated())
 		.sessionManagement(
